<resources>
    <string name="app_name">ProgrammerSuperMario</string>
    <string name="image_contentDescription">image_contentDescription</string>
    <string name="wisdom_school">智慧校园</string>
    <string name="material_design">Material Design</string>
    <string name="username_hint">账号/手机号</string>
    <string name="password_hint">密码</string>
    <string name="login">登录</string>
    <string name="splash_skip">跳过 5s</string>
    <string name="progress_loading">请稍候…</string>
    <string name="home_page">主页</string>
    <string name="category">分类</string>
    <string name="student">学生</string>
    <string name="mine">我的</string>
    <string name="meesage_notification">消息通知</string>
    <string name="quick_meeting">快速会议</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="open_drawer">打开侧滑栏</string>
    <string name="close_drawer">关闭侧滑栏</string>
    <string name="no_data">暂无数据</string>
</resources>
