<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--使用app:showAsAction有效 always表示显示在toolbar上面，但是只显示icon，不显示title-->
    <!--ifRoom表示显示在三个小点的点击popupMenu中，但是只显示文字，要想显示icon则使用反射-->
    <item
        android:id="@+id/search"
        android:icon="@mipmap/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/main_toolbar_message"
        android:icon="@mipmap/ic_message"
        android:showAsAction="ifRoom"
        android:title="@string/meesage_notification" />

    <item
        android:id="@+id/main_toolbar_quick_meeting"
        android:icon="@mipmap/ic_quick_meeting"
        android:showAsAction="ifRoom"
        android:title="@string/quick_meeting" />
</menu>